--- a/resources/main.css
+++ b/resources/main.css
@@ -115,3 +115,147 @@ tr{
 .fa-long-arrow-left{
     font-weight:10;
 }
+.list-item-dev { 
+    display: flex; 
+}
+
+.list-item-name {
+    font-weight: bold;
+}
+
+.list-item-details {
+    margin-left: 0.5em;    
+}
+
+.list-item-skill-tag {
+    list-style: none; 
+    margin-left: 0.5em; 
+}
+
+
+.dev-card-skill-tag {
+    margin-left: 1.5em;
+    display: list-item;
+}
+.link {
+    text-decoration: none;
+    color: black;
+    font-weight: 400;
+}
+.link-dn {
+    text-decoration: none;
+    color: #fff;
+}
+.title-xn {
+    color: rgb(216, 194, 56);
+    font-weight: 400;
+}
+.btn {
+    background: rgb(246, 190, 0);
+    border-radius:30px;
+    font-weight: 200;
+    text-transform :none;
+    font-size:12px;
+}
+.textField {
+    border-radius: 20px;
+    border : none;
+    background :rgb(244, 247, 248);
+}
+.content-tb {
+    color: rgb(244, 247, 248);
+    font-weight: 300;
+    font-size: 12px;
+}
+.text_dangky {
+    margin-bottom:15px;
+}
+.label-slide-center {
+    margin-top : -10px;
+    margin-left :45%;
+}
+.slide {
+    width :18px;
+    height :18px;
+    background: #f3f3f3;
+    border-radius: 50%;
+    border: 3px solid #f3f3f3;
+    z-index:10;
+}
+.slide-check {
+    width :18px;
+    height :18px;
+    background: rgb(246, 190, 0);
+    border-radius: 50%;
+    border: 3px solid #f3f3f3;
+    z-index:10;
+
+}
+.slide-duong {
+    background: #f3f3f3;
+    border: 1px solid #f3f3f3;
+    margin-top:8px;
+}
+.x-trigger .x-icon-el {
+    display: none;
+}
+.fa-trigger {
+    background-image: none !important;
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 20px;
+    padding-left: 10px;
+    margin-right :20px;
+}
+.my-mobile-trigger:after {
+    position: absolute;
+    content: "\f10b";
+    color: rgb(108, 187, 190);
+}
+.my-key-trigger:after {
+    position: absolute;
+    content: "\f084";
+    color: rgb(108, 187, 190);
+}
+.my-phone-trigger:after {
+    position: absolute;
+    content: "\f095";
+    color: rgb(108, 187, 190);
+}
+.my-user-trigger:after {
+    position: absolute;
+    content: "\f007";
+    color: rgb(108, 187, 190);
+}
+.my-mail-trigger:after {
+    position: absolute;
+    content: "\f0e0";
+    color: rgb(108, 187, 190);
+}
+.x-innerhtml {
+    width : 100%;
+}
+.title-ht {
+    float: left;
+}
+.icon-ht {
+    float :right;
+    text-align: right;
+}
+.title {
+    text-align: center;
+    font-size:20px;
+    font-weight:400;
+}
+.tt{
+    color: blue;
+    padding-left : 10px;
+}
+.x-no-row-lines > .x-listitem{
+    border-bottom: 1px solid #ddd !important;
+}
+.test-a {
+/*     opacity: 0.5; */
+    height :50px;
+}
